# studybuddy-exercise

./: .env.example  .gitignore  AI_USAGE.md  Makefile  README.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
graph/: __init__.py  config.py  http.py  main.py  server.py  state.py
graph/prompts/: __init__.py  system.py
graph/tools/: __init__.py  flashcards.py  notes.py
graph/utils/: __init__.py  log_store.py  logger.py
tests/: __init__.py
tests/evals/: __init__.py  conftest.py  test_agent.py
tests/integration/: __init__.py  test_graph.py
tests/unit/: __init__.py  test_flashcards.py  test_logger.py  test_state.py
web/: .env.example  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/logs/: page.tsx
web/components/chat/: input.tsx  message.tsx  messages.tsx
